feat(gemini): enhance GeminiRequest and GeminiService with JSON schema support
- Updated GeminiRequest to include responseMimeType and responseJsonSchema for structured JSON responses.
- Enhanced GeminiService to utilize the new schema, ensuring consistent response formats and improved error handling.
- Revised comments in RestClientConfig for better clarity on timeout settings.